# sandbox-arena

./: .gitignore  AGENTS.md  Dockerfile  README.md  benchmark.py  collector.py  dojo.py  dojo_agent.py  gym_env.py  providers.py  pyproject.toml  requirements.txt  run.py  run_eval.py  run_local.py  tournament.py  train.py  train_commodities.py  train_distributed.py  train_rl.py  train_transformer.py  visualize.py
agents/: example_agent.py  random_agent.py
agents/examples/: malicious.py  solutions.py  survival_balanced.py
arenas/coding/: arena.py
arenas/coding_hard/: arena.py
arenas/commodities/: gym_env.py
arenas/gridworld/: gym_env.py
arenas/snake/: gym_env.py
arenas/trading/: arena.py
data/: fetch_data.py
docker/: Dockerfile
examples/: deploy.sh  dojo.py  run.py
examples/agents/: trading_transformer.pt  trained_best.py  trained_blackjack_policy.npz  trained_commodity_policy.npz  trained_gridworld_policy.npz  trained_snake_policy.npz  trained_trading_policy.npz
examples/arenas/: base.py
examples/data/: aapl.csv  amzn.csv  copper.csv  corn.csv  gld.csv  gold.csv  googl.csv  meta.csv  metadata.json  msft.csv  natgas.csv  nvda.csv  oil.csv  qqq.csv  silver.csv  spy.csv  tlt.csv  tsla.csv  uso.csv  vxx.csv  (+1 more)
opponents/: heuristic_player.py  max_damage_player.py
sandbox/: job.yaml  sandbox-template.yaml  warm-pool.yaml
sandbox_arena/: __init__.py  batch.py  env.py  export.py
trajectories/: commodity_lewm.npz  commodity_training_1774309891.json  commodity_training_1774310430.json  commodity_training_1774310961.json  tournament_1774308919.json
(+11 files in other folders)
